deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complete-prodcution-e2e-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: complete-prodcution-e2e-app
  template:
    metadata:
      labels:
        app: complete-prodcution-e2e-app
    spec:
      containers:
      - name: complete-prodcution-e2e-app
        image: awsdemo84/complete-prodcution-e2e-pipeline:1.0.0-23
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
