service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complete-prodcution-e2e-svc
  labels:
    app: complete-prodcution-e2e-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: complete-prodcution-e2e-app
