ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complete-prodcution-e2e-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: app1.my-resolve-business.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complete-prodcution-e2e-svc
            port:
              number: 8080
